--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="main">
-  <div class="content">
 
+  <div class="content">
+    <div class="feed-container" *ngFor="let feedObject of container.feeds">
+      <app-feedobject [feedObject]="feedObject"></app-feedobject>
+    </div>
   </div>
 </div>
