--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 @import 'colors.scss';
 .main {
   background: $primary-color-dark;
-  height: 100vh;
+  height: 100%;
 }
-@media screen and (min-width: 1000px ){
+/*@media screen and (min-width: 1000px ){
   .content {
     width: 70%;
   }
@@ -12,9 +12,17 @@
   .content {
     width: 99%;
   }
-}
+}*/
 .content {
+  width: 100%;
   height: 100%;
   background: $primary-color;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.feed-container {
+    width: 300px;
+    margin: 5px auto;
 }
